plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'com.google.guava:guava'
}

shadowJar {
    archiveBaseName.set('gradleShadowJarArchive')
    archiveVersion.set('0.1')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'com.company.MyJUnit'
    }
}

tasks.build.dependsOn tasks.shadowJar